Testing different variable types....

--- a/.Net/800xAmms/Sandbox/App.config
+++ b/.Net/800xAmms/Sandbox/App.config
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
+  <Client>
+    <Ip>192.5.165165.561.</Ip>
+    <Port>102</Port>
+  </Client>
+  <Variables>
+    <Variable1>
+      <KNULL>
+        <Type>Bool</Type>
+        <Type>GString</Type>
+      </KNULL>
+      <TEST>
+        <Type>Real</Type>
+      </TEST>
+    </Variable1>
+  </Variables>
 </configuration>
